--- a/messenger/package.json
+++ b/messenger/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.6.1",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/node": "^20",
